<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    android:orientation="vertical"
    tools:context=".activity.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/per_bk"
        android:orientation="vertical">
        <!--android:padding="16dp"-->


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/chip_version"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="@string/chip_version"
                android:textColor="@color/colorWhite"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/system_version"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:gravity="center_vertical"
                android:text="@string/system_version"
                android:textColor="@color/colorWhite"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/sn_num"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="@string/sn_num"
                android:textColor="@color/colorGreen"
                android:textSize="22sp" />

            <TextView
                android:id="@+id/firmware_version"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:gravity="center_vertical"
                android:text="@string/firmware_version"
                android:textColor="@color/colorGreen"
                android:textSize="22sp" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/per_bk"
        android:orientation="horizontal">
        <!--android:padding="16dp"-->

        <TextView
            android:id="@+id/mem_total"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/mem_total"
            android:textColor="@color/colorWhite"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/mem_free"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/mem_free"
            android:textColor="@color/colorWhite"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/ext_storage"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/ext_storage"
            android:textColor="@color/colorWhite"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/per_bk"
        android:orientation="vertical">

        <LinearLayout
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="5dp"
            android:paddingTop="5dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/test_instructions"
                android:textColor="@color/colorWhite"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingLeft="16dp"
                android:text="@string/wifi_self_test"
                android:textColor="@color/colorWhite"
                android:textSize="20sp" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/ble_self_test"
                android:textColor="@color/colorWhite"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"
            android:orientation="horizontal">

            <TextView
                android:background="@drawable/per_bk"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:paddingLeft="16dp"
                android:text="@string/tf_self_test_hint"
                android:textColor="@color/colorWhite"
                android:textSize="20sp" />

            <TextView
                android:background="@drawable/per_bk"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/u_self_test_hint"
                android:textColor="@color/colorWhite"
                android:textSize="20sp" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <com.bestom.producetest.view.TestView
            android:id="@+id/wifi_test"
            android:layout_width="0dp"
            android:layout_height="80dp"
            android:layout_weight="1"
            android:background="@drawable/per_bk"
            android:gravity="center_vertical"
            android:paddingLeft="16dp"
            android:text="@string/wifi_test"
            android:textColor="@color/colorWhite"
            android:textSize="20sp" />

        <com.bestom.producetest.view.TestView
            android:id="@+id/bluetooth_test"
            android:layout_width="0dp"
            android:layout_height="80dp"
            android:layout_weight="1"
            android:background="@drawable/per_bk"
            android:gravity="center_vertical"
            android:paddingLeft="16dp"
            android:text="@string/bluetooth_test"
            android:textColor="@color/colorWhite"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <com.bestom.producetest.view.TestView
            android:id="@+id/sd_card_test"
            android:layout_width="0dp"
            android:layout_height="80dp"
            android:layout_weight="1"
            android:background="@drawable/per_bk"
            android:gravity="center_vertical"
            android:paddingLeft="16dp"
            android:text="@string/sd_card_test"
            android:textColor="@color/colorWhite"
            android:textSize="20sp" />

        <com.bestom.producetest.view.TestView
            android:id="@+id/usb_host_test"
            android:layout_width="0dp"
            android:layout_height="80dp"
            android:layout_weight="1"
            android:background="@drawable/per_bk"
            android:gravity="center_vertical"
            android:paddingLeft="16dp"
            android:text="@string/usb_host_test"
            android:textColor="@color/colorWhite"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@drawable/per_bk"
        android:orientation="horizontal">

        <!-- 扬声器测试 -->
        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:background="@drawable/per_bk">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/speaker_title"
                android:gravity="center_horizontal"
                android:layout_marginTop="16dp"
                android:textColor="@color/colorWhite"
                android:textSize="22sp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:paddingBottom="16dp"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/speaker_play_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/speaker_play"
                    android:padding="10dp"
                    android:layout_margin="2dp"
                    android:textColor="@color/colorWhite"
                    android:textSize="22sp" />

                <Button
                    android:id="@+id/left_channel_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/left_channel"
                    android:layout_margin="2dp"
                    android:padding="10dp"
                    android:textColor="@color/colorWhite"
                    android:textSize="22sp" />

                <Button
                    android:id="@+id/right_channel_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/right_channel"
                    android:layout_margin="2dp"
                    android:padding="10dp"
                    android:textColor="@color/colorWhite"
                    android:textSize="22sp" />
            </LinearLayout>
        </RelativeLayout>

        <!-- 录音麦测试 -->
        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:background="@drawable/per_bk">

            <TextView
                android:id="@+id/record_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="5dp"
                android:text="@string/record_title"
                android:textColor="@color/colorWhite"
                android:textSize="22sp" />

            <TextView
                android:id="@+id/record_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/record_title"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="5dp"
                android:textColor="@color/colorWhite"
                android:textSize="22sp" />

            <com.bestom.producetest.view.VUMeter
                android:id="@+id/uvMeter"
                android:layout_width="180dp"
                android:layout_height="30dp"
                android:layout_below="@+id/record_text"
                android:layout_centerHorizontal="true"
                android:background="@drawable/vumeter" />

            <Button
                android:id="@+id/record_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/uvMeter"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="5dp"
                android:paddingBottom="16dp"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:paddingTop="5dp"
                android:text="@string/record_play"
                android:textColor="@color/colorWhite"
                android:textSize="20sp" />
        </RelativeLayout>

        <!-- 实体按键测试 -->
        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:background="@drawable/per_bk">

            <TextView
                android:id="@+id/key_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="16dp"
                android:text="@string/key_title"
                android:textColor="@color/colorWhite"
                android:textSize="22sp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/key_volume_less"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:background="@color/colorAccent"
                    android:padding="20dp"
                    android:text="@string/key_volume_less"
                    android:textColor="@color/colorWhite"
                    android:textSize="22sp" />

                <TextView
                    android:id="@+id/key_volume_add"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:background="@color/colorAccent"
                    android:padding="20dp"
                    android:text="@string/key_volume_add"
                    android:textColor="@color/colorWhite"
                    android:textSize="22sp" />
            </LinearLayout>
        </RelativeLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:background="@drawable/per_bk">

        <Button
            android:id="@+id/lcd_test_btn"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/lcd_test"
            android:textColor="@color/colorWhite"
            android:textSize="22sp" />

        <Button
            android:id="@+id/camera_test_btn"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/camera_test"
            android:textColor="@color/colorWhite"
            android:textSize="22sp" />

        <Button
            android:id="@+id/sensor_test_btn"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/sensor_test"
            android:textColor="@color/colorWhite"
            android:textSize="22sp" />

        <Button
            android:id="@+id/nfc_test_btn"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/nfc"
            android:textColor="@color/colorWhite"
            android:textSize="22sp" />
        <Button
            android:id="@+id/gpio_test_btn"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/gpio"
            android:textColor="@color/colorWhite"
            android:textSize="22sp" />

        <Button
            android:id="@+id/video_test_btn"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/video_test"
            android:textColor="@color/colorWhite"
            android:textSize="22sp" />

        <Button
            android:id="@+id/uninstall_btn"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/close"
            android:textColor="@color/colorWhite"
            android:textSize="22sp" />
    </LinearLayout>
</LinearLayout>